<resources>
    <string name="app_name">Questionario QSVD</string>
    <string name="nomeCompleto">Nome Completo</string>
    <string name="idade">Idade</string>
    <string name="sexo">Sexo:</string>
    <string name="escolaridade">Escolaridade:</string>
    <string name="expVideoCode">Experiência com Codificação de Vídeos:</string>
    <string name="expVideoCodeLegenda">1 (Nenhuma) - 5 (Expert)</string>
    <string name="proximo">Próximo</string>
    <string-array name="escolaridade">
        <item>Fundamental Completo</item>
        <item>Médio Completo</item>
        <item>Graduação em Andamento</item>
        <item>Graduação Completa</item>
        <item>Pós-Graduação em Andamento</item>
        <item>Pós-Graduação Completa</item>
    </string-array>

    <string name="ishihara">Insira o número que você enxerga.</string>
    <string name="ishiharaImgDescription">Imagem que contém vários pontos coloridos formando algum número com o objetivo de testar se o avaliador não possui daltonismo.</string>
    <string name="nao_enxergo">Não enxergo nenhum número</string>
    <string name="validacaoIshihara">Por favor, insira o número na imagem ou marque a opção acima.</string>

    <string name="diminuicaoQualidadeVideo">Diminuição da Qualidade do Vídeo:</string>
    <string name="avaliacaoImperceptivel">Imperceptível</string>
    <string name="avaliacaoPerceptivel">Perceptível mas não incomoda</string>
    <string name="avaliacaoIncomodaPouco">Incomoda um pouco</string>
    <string name="avaliacaoIncomoda">Incomoda</string>
    <string name="avaliacaoIncomodaMuito">Incomoda muito</string>
    <string name="texto_avaliacao">Neste teste, nós pedimos que você julgue a visibilidade e severidade da diminuição de qualidade do vídeo, resultante da codificação que utilizamos.\nCada processo será anunciado verbalmente pelo número. A primeira apresentação de um processo será anunciado como “Referência”, e o segundo como “Teste”.\nO teste consiste em uma série de ensaios de julgamento, cada um consistindo de duas apresentações do mesmo vídeo. A primeira apresentação, de referência, mostra o vídeo sem codificação. A segunda, de teste, mostra o mesmo vídeo, porém codificado.\nAgora nós mostraremos a você 4 ensaios de demonstração. Ao decorrer das 4 demonstrações, o material de teste exibirá diferentes níveis de diminuição de qualidade evidente para ilustrar os tipos de diminuição que você verá durante a sessão de teste.\nPedimos que você examine o vídeo de Referência e note quaisquer deficiências presentes, e então para avaliar a visibilidade de qualquer diminuição de qualidade adicional no material de Teste.\nAo julgar a visibilidade e severidade da diminuição de qualidade proveniente da codificação, pedimos que você avalie os seguintes vídeos:</string>

    <string name="obrigado">"As informações foram salvas no sistema.\nObrigado pela sua participação."</string>
    <string name="qual_imagem_esta_avaliando">Imagem que lembra o avaliador de qual vídeo está avaliando</string>

</resources>
