<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hut8.questionarioqsvd.MainActivity"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nomeCompleto"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editTextSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/idade"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo"/>
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radioButtonF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewSexo"
            android:text="F"/>
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radioButtonM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewSexo"
            android:layout_marginLeft="60dp"

            android:text="M"/>
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewExpVideoCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/expVideoCode"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewExpVideoCodeLegenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewExpVideoCode"
            android:text="@string/expVideoCodeLegenda"/>


    </RelativeLayout>


</LinearLayout>
