<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ishihara"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hut8.questionarioqsvd.IshiharaActivity">

    <ImageView
        android:id="@+id/imageIshihara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ishihara_23"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/ishiharaImgDescription"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editTextIshihara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/ishihara"
        android:layout_below="@id/imageIshihara" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkBoxIshihara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nao_enxergo"
        android:textColor="@color/colorSecondaryText"
        android:layout_below="@id/editTextIshihara"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonProximoIshihara"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proximo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:shadowRadius="2"
        android:elevation="1dp" />

</RelativeLayout>
